2002-07-13  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* make.deps:
	* gui/Makefile.in: fix include search path for dependencies generation

2002-07-13  John Levon  <moz@compsoc.man.ac.uk>

	* dae/oprofiled.c: don't throw away last samples on shutdown
	  notification
 
2002-07-13  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* doc/oprofile.1.in:
	* doc/oprofile.xml:
	* gui/oprof_start.cpp:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/oprof_start.base.ui: remove kernel-range specification UI

2002-07-12  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
	* dae/oprofiled.c:
	* libop/op_interface.h: 
	* module/oprofile.c: 
	* module/oprofile.h:
	* module/x86/op_nmi.c: 
	* module/x86/op_syscalls.c: replace partial_stop,quitting,prof_on
	  with single state variable, and clean up how shutdown is triggered.
 
	* module/oprofile.c: always init data->entries etc. for every CPU
 
2002-07-12  Philippe Elie  <phil.el@wanadoo.fr>

	* Makefile.in: typo in clean target

	* module/compat.h:
	* module/compat24.h:
	* module/oprofile.c:
	* module/x86/op_nmi.c: support for online/offline cpu for 2.5.23+

2002-07-11  Philippe Elie  <phil.el@wanadoo.fr>

	* Makefile.in:
	* module/Makefile.in:
	* module/x86/Makefile.in: move all goal to the topdir Makefile

2002-07-10  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* pp/op_time.cpp:  errno for file permission problem is
	  EACCES not EPERM ...

	* module/x86/op_apic.c:
	* module/x86/op_fixmap.c:
	* module/x86/op_nmi.c: revert partially the 2002-06-26 patch, preempt
	  need rather to be fixed before/after calling the
	  op_int_operation functions pointer.

2002-07-09  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp: use <ctime> not <time.h>
	* libutil/op_libiberty.c: don't assume than string.h is included
	   by libiberty.h as in old gcc release

2002-07-08  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.h: