@@ -1,3 +1,12 @@
+2002-07-14  John Levon  <moz@compsoc.man.ac.uk>
+
+	* Makefile.in: set KVERS properly
+ 
+	* dae/oprofiled.c: remove eip == 0 checking
+ 
+	* module/oprofile.c: do check in evict_op_entry() instead,
+	  as suggested by Philippe
+ 
 2002-07-13  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* TODO: update
